--- a/app/src/main/res/layout/card_user.xml
+++ b/app/src/main/res/layout/card_user.xml
@@ -59,6 +59,7 @@
                 app:drawableTint="@color/green" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btSeePost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
