--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#FF285e2d</color>
     <color name="green_dark">#FF1f3f30</color>
+    <color name="transparent">#00000000</color>
+    <color name="black_gray">#333333</color>
 </resources>
