--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,7 @@
         <item name="android:textColorHint">@color/green</item>
         <item name="hintTextColor">@color/green</item>
     </style>
+    <style name="CustomProgressBar" parent="@android:style/Widget.ProgressBar.Horizontal">
+        <item name="colorAccent">#FF0000</item>
+    </style>
 </resources>
