--- a/app/src/main/res/layout/progress.xml
+++ b/app/src/main/res/layout/progress.xml
@@ -29,7 +29,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/textViewProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
